@@ -20,4 +20,7 @@ Overview
   
   * DEADLINE QoS
   
+  * DESTINATION_ORDER follows the same semantics as specified in DDS specification.
+    I.e. determination is done at instance level, not at sample level
+
   * FIX: add INFO_DESTINATION to messages
