@@ -1,6 +1,8 @@
 0.9.6
     - Removed ReaderListener & WriterListener in favor of CommunicationListener.
     - DEADLINE QoS
+    - DESTINATION_ORDER follows the same semantics as specified in DDS specification.
+      I.e. determination is done at instance level, not at sample level
     - FIX: add INFO_DESTINATION to messages
     
 0.9.5
